# SO101-Bimanual-Manipulation

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md
arm_test_code/: arm_test.py  change_id.py  move_all_small.py  move_servo.py  ping_servo.py  read_all_positions.py  read_position.py  save_home_pose.py  test
config/: camera_schedule.json  single_arm_calibration.json
docs/: CAMERA_COMPUTE_ARCHITECTURE.md  HARDWARE_INVENTORY.md  LOCAL_HARDWARE_CONFIG.md  PORTFOLIO_LOG.md  PROJECT_CHARTER.md  ROADMAP.md  STM32_MODULAR_ARCHITECTURE.md  STM32_SINGLE_ARM_CONTROL_PLAN.md  VERIFICATION_MATRIX.md
docs/adr/: 0001-system-partition.md  0002-motion-time-ownership.md  0003-five-dof-task-scope.md  0004-safety-and-arming.md  0005-camera-and-policy-staging.md  0006-wire-protocol.md  0007-camera-compute-budget.md  0008-left-arm-first.md  0009-stm32-action-adapter-first.md  0010-single-backend-entrypoint.md  README.md
docs/checklists/: PHASE_0_HARDWARE_BASELINE.md  PHASE_4_ISAAC_MOVEIT_INTEGRATION.md  PHASE_5_ACCEPTANCE_ROLLBACK.md  PHASE_5_GRIPPER_MAPPING_PLAN.md  PHASE_5_LEFT_ARM_HARDWARE_BACKEND.md  STM32_SINGLE_ARM_BRINGUP.md
docs/handoff/: PHASE_4_WINDOWS_HANDOFF_PROMPT.md
docs/test-results/: 2026-07-20-stm32-binary-control-plane.md  2026-07-21-camera-bandwidth-control-isolation.md  2026-07-21-camera-decode-control-load.md  2026-07-21-camera-manager-hotplug.md  2026-07-21-camera-phase-decode-latency.md  2026-07-21-ros2-host-bridge.md  2026-07-21-sts3215-torque-safety.md  2026-07-24-isaac-moveit-left-arm-integration.md  2026-07-24-phase5-action-validation.md  2026-07-25-phase5-stm32-read-only.md
dual_arm_test/: dual_arm_quasi_sync_test.py  dual_arm_stability_test.py  dual_arm_test.py  left_direction_calibration_5dof.py  left_home_pose.json  left_home_pose_5dof.json  right_arm_debug.py  right_home_pose.json  save_left_home_pose_5dof.py  scan_id.py
dual_arm_test/5dof_issue/: dual_arm_debug.md  dual_arm_stability_test_left5dof.py
firmware/stm32_actuator/: CMakeLists.txt  README.md
firmware/stm32_actuator/include/actuator_core/: calibration.h  cobs.h  crc32c.h  message_ids.h  protocol.h  safety.h  setpoint_queue.h
firmware/stm32_actuator/src/: calibration.c  cobs.c  crc32c.c  protocol.c  safety.c  setpoint_queue.c
firmware/stm32_actuator/tests/: test_main.c
firmware/stm32_g474_single_arm/: .cproject  .mxproject  .project  stm32_g474_single_arm.ioc
firmware/stm32_g474_single_arm/Core/Inc/: binary_control.h  main.h  servo_bus.h  single_arm_app.h  single_arm_config.h
firmware/stm32_g474_single_arm/Core/Src/: binary_control.c  main.c  servo_bus.c  single_arm_app.c  stm32g4xx_hal_msp.c
hardware/: phase0_baseline.json
isaac_sim/: README.md
isaac_sim/assets/so101_new_calib/: so101_new_calib.usda
isaac_sim/assets/so101_new_calib/payloads/: base.usda  (+3 more)
protocol/: README.md  message_ids.json
ros2_ws/src/manipulation_camera_manager/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/manipulation_camera_manager/config/: cameras.yaml
ros2_ws/src/manipulation_camera_manager/include/manipulation_camera_manager/: jpeg_decoder.hpp  latest_frame_slot.hpp  phase_scheduler.hpp  rolling_statistics.hpp  v4l2_camera.hpp
ros2_ws/src/manipulation_camera_manager/launch/: camera_manager.launch.py
ros2_ws/src/manipulation_camera_manager/src/: camera_manager_node.cpp  jpeg_decoder.cpp  latest_frame_slot.cpp  phase_scheduler.cpp  rolling_statistics.cpp  v4l2_camera.cpp
ros2_ws/src/manipulation_camera_manager/test/: test_jpeg_decoder.cpp  test_latest_frame_slot.cpp  test_phase_scheduler.cpp  test_rolling_statistics.cpp
ros2_ws/src/single_arm_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/single_arm_bridge/config/: bridge.local.yaml.example  bridge.yaml  single_arm_calibration.json
ros2_ws/src/single_arm_bridge/launch/: bridge.launch.py
ros2_ws/src/single_arm_bridge/single_arm_bridge/: __init__.py  action_execution.py  action_validation.py  backend_lease.py  bridge_node.py  calibration.py  device_discovery.py  follow_joint_trajectory_server.py  hardware_identity.py  motion_goal_arbiter.py  parallel_gripper_command_server.py  protocol.py  serial_port.py  transport.py
ros2_ws/src/so101_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/so101_bringup/config/: ros2_controllers.yaml
ros2_ws/src/so101_bringup/launch/: external_stm32_moveit.launch.py  isaac_moveit.launch.py  mock_controllers.launch.py  mock_moveit.launch.py  so101_moveit.launch.py
ros2_ws/src/so101_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/so101_isaac_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/so101_isaac_bridge/so101_isaac_bridge/: __init__.py  bridge_node.py  mapping.py
ros2_ws/src/so101_isaac_bridge/test/: test_mapping.py
ros2_ws/src/so101_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/so101_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  so101_left.srdf
ros2_ws/src/so101_moveit_config/launch/: external_move_group.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
tests/: test_actuator_protocol.py  test_backend_lease_handoff.py  test_generate_protocol_header.py  test_joint_calibration.py  test_motion_goal_arbiter.py  test_moveit_external_execution.py  test_single_arm_action_execution.py  test_single_arm_action_validation.py  test_single_arm_backend_exclusivity.py  test_single_arm_bridge_core.py  test_single_arm_follow_joint_trajectory_ros.py  test_single_arm_parallel_gripper_ros.py  test_so101_backend_selector.py  test_validate_camera_schedule.py  test_validate_phase0.py  test_validate_protocol_manifest.py
tools/: __init__.py  actuator_protocol.py  camera_control_load_test.py  generate_protocol_header.py  joint_calibration.py  ros_gripper_cancel_once.py  ros_moveit_execute_once.py  stm32_motion_stop_test.py  stm32_protocol_smoke.py  stm32_read_only_counters.py  stm32_setpoint_motion_test.py  validate_camera_schedule.py  validate_phase0.py  validate_protocol_manifest.py
(+8 files in other folders)
