<?xml version="1.0"?>
<package format="3">
  <name>manipulation_camera_manager</name>
  <version>0.1.0</version>
  <description>Latest-frame MJPEG capture and reconnect manager for manipulation cameras.</description>
  <maintainer email="noreply@github.com">dasom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>diagnostic_msgs</depend>
  <depend>libjpeg</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
