<?xml version="1.0"?>
<package format="3">
  <name>single_arm_bridge</name>
  <version>0.1.0</version>
  <description>Safe ROS 2 bridge for the STM32G474 single-arm actuator protocol.</description>
  <maintainer email="noreply@github.com">dasom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
