<?xml version="1.0"?>
<package format="3">
  <name>so101_bringup</name>
  <version>0.1.0</version>
  <description>Backend-selectable bringup for mock, Isaac Sim, and STM32 SO-101 control.</description>
  <maintainer email="noreply@github.com">dasom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>parallel_gripper_controller</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>so101_moveit_config</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>so101_description</exec_depend>
  <exec_depend>so101_isaac_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
