<?xml version="1.0"?>
<package format="3">
  <name>so101_isaac_bridge</name>
  <version>0.1.0</version>
  <description>MoveIt action and joint-state adapter for the validated SO-101 Isaac Sim backend.</description>
  <maintainer email="noreply@github.com">dasom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
